syntax = "proto3";

import "google/protobuf/empty.proto";

package db;

service DB {
  rpc Lock (LockRequest) returns (LockResponse) {}
  rpc Unlock (UnlockRequest) returns (google.protobuf.Empty) {}
  rpc SetData (SetDataRequest) returns (google.protobuf.Empty) {}
  rpc GetData (GetDataRequest) returns (GetDataResponse) {}
}

message LockRequest {
  string device = 1;
}

message LockResponse {
  uint64 lock_id = 1;
}

message UnlockRequest {
  string device = 1;
  uint64 lock_id = 2;
}

message SetDataRequest {
  uint64 lock = 1;
  string device = 2;
  bytes data = 3;
}

message GetDataRequest {
  uint64 lock = 1;
  string device = 2;
}

message GetDataResponse {
  bytes data = 1;
}
